--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
-scikit-learn==1.3.2
+scikit-learn>=1.3.4
 pandas==2.1.1
 joblib==1.3.2
 transformers==4.40.0
