--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
-scikit-learn>=1.3.4
-pandas==2.1.1
-joblib==1.3.2
-transformers==4.40.0
-torch==2.2.2
-sentencepiece==0.1.99
-streamlit==1.27.0
-requests==2.31.0
-pydantic==1.10.9
-tqdm==4.66.1
-python-multipart==0.0.6
+fastapi
+uvicorn[standard]
+scikit-learn
+pandas
+joblib
+transformers
+torch
+sentencepiece
+streamlit
+requests
+pydantic
+tqdm
+python-multipart
